experimental/ir/testdata/editions/inheritance.proto.stderr.txt
error: `legacy_closed_enum` is deprecated in Edition 2023
  --> testdata/editions/inheritance.proto:22:8
   |
15 | edition = "2023";
   |           ------ edition specified here
...
21 | option features.field_presence = IMPLICIT;
22 | option features.(pb.cpp).legacy_closed_enum = false;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: deprecated since Edition 2023
   = help: deprecated: The legacy closed enum behavior in C++ is deprecated and
           is scheduled to be removed in edition 2025. See
           http://protobuf.dev/programming-guides/enum/#cpp for more information

encountered 1 error
